--- a/aspnet-microservices/services/Basket/Baket.API/appsettings.json
+++ b/aspnet-microservices/services/Basket/Baket.API/appsettings.json
@@ -1,14 +1,10 @@
 {
-  "DatabaseSettings": {
-    "ConnectionString": "mongodb://catalogdb:27017",
-    "DatabaseName": "CatalogDB",
-    "CollectionName": "Products"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
