--- a/aspnet-microservices/docker-compose.yml
+++ b/aspnet-microservices/docker-compose.yml
@@ -4,11 +4,39 @@ services:
   catalogdb:
     image: mongo
 
+  basketdb:
+    image: redis:alpine
+
+  discountdb:
+    image: postgres
+
+  pgadmin:
+    image: dpage/pgadmin4
+
+  portainer:
+    image: portainer/portainer-ce
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
       dockerfile: services/catalog/Catalog.API/Dockerfile
 
+  baket.api:
+    image: ${DOCKER_REGISTRY-}baketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Baket.API/Dockerfile
+
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.API/Dockerfile
+
 volumes:
   mongo_data:
+  portainer_data:
+  postgres_data:
+  pgadmin_data:
+
