--- a/aspnet-microservices/services/Discount/Discount.GRPC/appsettings.json
+++ b/aspnet-microservices/services/Discount/Discount.GRPC/appsettings.json
@@ -1,12 +1,15 @@
 {
-  "CacheSettings": {
-    "ConnectionString": "basketdb:6379"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
     }
   }
 }
